# shadow-ndr1

./: .env.example  .gitattributes  .gitignore  10-10-QUALITY-EXECUTION-GUIDE.md  ACTION_PLAN_CAPTURE_FIX.md  BUILD_REPORT.md  COMPLETE-QUALITY-DELIVERY-PACKAGE.md  COMPLETE-UPGRADE-SUMMARY.md  COMPREHENSIVE-TEST-SUITE.md  DEBUG_IMPLEMENTATION.md  DEPLOYMENT-COMPLETE.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SUMMARY.md  DOCKER_NOT_FOUND.md  DOCKER_SETUP.md  DOCUMENTATION_INDEX.md  FINAL-DEPLOYMENT-GUIDE.md  FIX-ALL-ERRORS.sh  FIXED.md  GETTING_STARTED.md  GZIP_FIX_REPORT.md  IMPLEMENTATION_COMPLETE.md  INDEX.md  INSTALL.md  INSTALLATION_COMPLETE.md  INTEGRATION_STATUS.md  INVESTOR-DEMO-GUIDE.md  INVESTOR-DEPLOY-10MIN.ps1  INVESTOR-DEPLOY-10MIN.sh  INVESTOR-READY.md  LAUNCH_GUIDE.md  MASTER-TEST-PLAN.md  PCAP_FIX_GUIDE.md  PHASE-2-API-INTEGRATION.md  PHASE-3-ML-INTEGRATION.md  PHASE-4-PRODUCTION-DEPLOYMENT.md  QUICKSTART.md  QUICK_COMMANDS.md  QUICK_REFERENCE.md  QUICK_START.md  (+51 more)
.claude/: settings.json  settings.local.json
.github/workflows/: test.yml
deploy/: README.md
docs/: README.md
monitoring/: prometheus.yml
monitoring/grafana-provisioning/dashboards/: dashboards.yml
multi-tenant/: README.md  docker-compose.yml
multi-tenant/backend/: .env  package.json
multi-tenant/backend/db/: app_role.sql  assets_columns_fix.sql  refresh_tokens_fix.sql  rls.sql  rls_force.sql  schema.sql  (+4 more)
multi-tenant/frontend/: Dockerfile  index.html  package.json  tailwind.config.js  vite.config.js
multi-tenant/secure-atc/: README.md
multi-tenant/secure-atc/ground-station/: Cargo.toml
multi-tenant/secure-atc/ground-station/src/: audit.rs  crypto.rs  hsm.rs  keytree.rs  knock.rs  lib.rs  main.rs  monitor.rs  multisig.rs  protocol.rs  puf.rs  qkd.rs  qrng.rs  rekey.rs  rpss.rs  session.rs  threshold.rs  vdf.rs
shadow-api/: .env  BACKEND_SETUP.md  Dockerfile  README.md  migrate_users.py  run_migrations.py
shadow-api/app/: config.py  main.py
shadow-api/migrations/: 001_create_users_tables.sql
shadow-ingestion/: .dockerignore  Dockerfile  README.md  config.yaml  go.mod  go.sum  main.go
shadow-ingestion/ebpf/: chaos_inject.c  xdp_fastpath.c
shadow-ml/: Dockerfile  README.md  claude_alert.py  main.py  rt-test.json
shadow-ml.v11-backup/: .env  README.md
shadow-ml.v11-backup/app/: config.py  database.py  features.py  main.py
shadow-ml/alerts/: __init__.py
shadow-ml/analytics/: cross_protocol_correlator.py  encrypted_traffic_analyzer.py  nlp_query.py  traffic_analytics.py  ueba.py
shadow-ml/apex/: README.md  __init__.py  routes.py
shadow-ml/api/: auth.py  canary_routes.py  routes.py
shadow-ml/app/: auto_threat_simulator.py
shadow-ml/aviation/: aeromacs_profiler.py  autoencoder.py  dga_detector.py  flightradar_correlator.py  gps_ptp_monitor.py  ils_monitor.py  kinematic_validator.py  protocol_models.py  rf_fingerprinting.py  xai_explainer.py
shadow-ml/core/: __init__.py  audit_log.py  config.py  constants.py  exceptions.py  ip_blocklist.py  neural_engine.py  rate_limiter.py  secrets.py  security_headers.py
shadow-ml/data/: shadow.db
shadow-ml/defense/: __init__.py  attack_reflection.py  biometric_auth.py  canary_tokens.py  hardware_defense.py  honeypot_ml.py  polymorphic_encoder.py  quantum_noise.py  supply_chain_detector.py
shadow-ml/demo/: elal_attack_demo.py
shadow-ml/distributed/: ray_engine.py
shadow-ml/fusion/: __init__.py  attention_fusion.py  kalman_fusion.py  sensor_fusion_engine.py  temporal_fusion.py  zero_trust_verifier.py
shadow-ml/ml/: adaptive_evasion.py  adversarial_defense.py  drift_detector.py  federated_learning.py  gnn_lateral_prediction.py  hardware_accel.py  isolation_forest.py  model_poisoning_detector.py  model_registry.py  neural_immune.py  online_learning.py  temporal_anomaly_detector.py  test_neural_immune.py
shadow-ml/models/: baseline_v1_meta.json  trajectory_lstm_v1_meta.json
shadow-ml/monitoring/: dashboard.py  metrics.py  opentelemetry_tracer.py
shadow-ml/orchestrator/: death_trap_engine.py  decision_engine.py  threat_consumer.py
shadow-ml/profiling/: __init__.py
shadow-ml/rag/: knowledge_base.py  rag_engine.py  stix_ingestion.py  threat_hunter.py  threat_hunting_llm.py  vector_store.py
shadow-ml/red_team/: README.md  __init__.py  adversary.py  safety.py  scoreboard.py
shadow-ml/response/: cyber_physical_impact.py  firewall_generator.py  incident_triage.py  privesc_enumerator.py
shadow-ml/rl/: ppo_rlhf.py  predictive_canary.py
shadow-ml/scripts/: bench_baseline.py  train_baseline.py  train_trajectory_lstm.py
shadow-ml/security/: mtls_manager.py  pqc_comms.py  timing_analysis.py
shadow-ml/simulators/: __init__.py  auto_threat_simulator.py  protocol_fuzzer.py
shadow-ml/storage/: database.py
shadow-ml/streaming/: feature_store.py  kafka_engine.py
shadow-ml/tests/: adversarial_stress_test.py  test_simple.py
shadow-parsers/: Cargo.toml  Dockerfile  README.md
shadow-parsers/benches/: parsing_bench.rs
shadow-parsers/src/: acars.rs  adsb.rs  aeromacs.rs  baseline_scorer.rs  burst_detector.rs  cpdlc.rs  deduplicator.rs  external_validation.rs  geofencing.rs  golay.rs  icao_validator.rs  iec104.rs  kafka.rs  lib.rs  mesh_consensus.rs  mlat.rs  mode_s.rs  modulation.rs  physics.rs  signal_analysis.rs  spoofing_detector.rs  threat_correlation.rs  tisb.rs  uat.rs  vdl.rs
shadow-parsers/src/common/: criticality.rs  mod.rs  parseable.rs  pool.rs  streaming.rs  threat.rs  timestamp.rs
shadow-sensor/: Cargo.toml  README.md  test.rs
shadow-sensor/src/: adaptive_sampler.rs  ai_engine.rs  analytics.rs  capture.rs  config.rs  distributed_mesh.rs  dpi_matcher.rs  flow_table.rs  hdr_telemetry.rs  hot_reload.rs  hw_accel.rs  main.rs  metrics.rs  parser.rs  phantom_airspace.rs  processor.rs  quantum_crypto.rs  reassembly.rs  rule_jit.rs  spsc_pipe.rs  threat.rs  threat_hunter.rs  utils.rs  xdp_capture.rs
shadow-sensor/src/protocols/: acars.rs  adsb.rs  aeromacs.rs  amqp.rs  cpdlc.rs  dhcp.rs  dnp3.rs  dns.rs  icmp.rs  iec104.rs  mod.rs  modbus.rs  mode_s.rs  mqtt.rs  rtp.rs  sip.rs  tcp.rs  udp.rs  vdl.rs
(+150 files in other folders)
