[package]
name = "shadow-parsers"
version = "0.1.0"
edition = "2021"
authors = ["Shadow NDR Team"]
description = "Aviation protocol parsers for Shadow NDR – ADS-B, ACARS, Mode S, VDL, CPDLC, AeroMACS, IEC104"
license = "Apache-2.0"
repository = "https://github.com/shadow-ndr/shadow-parsers"
readme = "README.md"

[features]
default = ["full"]
iec104 = []
adsb = []
acars = []
mode_s = []
vdl = []
cpdlc = []
aeromacs = []
ffi = []
bench = []
full = ["iec104", "adsb", "acars", "mode_s", "vdl", "cpdlc", "aeromacs"]

[dependencies]
nom = { version = "7.1", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
thiserror = "1.0"
parking_lot = "0.12"
chrono = "0.4"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
lazy_static = "1.4"
tracing = "0.1"
tracing-subscriber = "0.3"
hex = "0.4"
byteorder = "1.4"
bitflags = "2.4"
crc = "3.0"
clap = { version = "4.4", features = ["derive"] }
ctrlc = "3.4"
[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"
tempfile = "3.3"
rand = "0.8"

[[bench]]
name = "parsing_bench"
harness = false

[[bin]]
name = "shadow-sensor"
path = "src/bin/sensor.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[profile.bench]
opt-level = 3
lto = true
debug = false