[package]
name = "shadow-parsers"
version = "0.2.0"
edition = "2021"
authors = ["Shadow NDR Team"]
description = "Project Titan: Military-grade Aerospace NDR Protocol Parsers"
license = "Apache-2.0"
repository = "https://github.com/shadow-ndr/shadow-parsers"

[features]
default = ["full"]
iec104 = []
adsb = []
acars = []
mode_s = []
vdl = []
cpdlc = []
aeromacs = []
golay = []
mlat = []
signal = []
spoofing = []
geofencing = []
uat = []
tisb = []
icao_validator = []
burst = []
baseline = []
consensus = []
correlation = []
modulation = []
external_validation = []
deduplicator = []
full_avionics = ["iec104", "adsb", "acars", "mode_s", "vdl", "cpdlc", "aeromacs", "golay", "mlat", "signal", "spoofing", "geofencing", "uat", "tisb"]
full_threat_detection = ["icao_validator", "burst", "baseline", "consensus", "correlation", "modulation", "external_validation", "deduplicator"]
full = ["full_avionics", "full_threat_detection"]

[dependencies]
# Concurrency & Async
tokio = { version = "1.32", features = ["full"] }
crossbeam-channel = "0.5"
rayon = "1.8"

# Ingestion
pcap = "1.1"

# Telemetry / Messaging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Parsing & Binary
nom = { version = "7.1", features = ["std"] }
byteorder = "1.4"
hex = "0.4"
base64 = "0.21"

# Data Types
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Physics Engine State
lru = "0.12"
lazy_static = "1.4"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }
ctrlc = "3.4"
parking_lot = "0.12"
regex = "1.12"
bincode = "1.3"

[[bin]]
name = "shadow-sensor"
path = "src/bin/sensor.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3

[profile.dev]
opt-level = 0
debug = true
