[package]
name = "shadow-sensor"
version = "5.0.0"
edition = "2021"
authors = ["Shadow NDR Team"]
description = "High-performance network sensor for aviation cybersecurity"
license = "MIT"
repository = "https://github.com/shadow-ndr/sensor"


[[bin]]
name = "shadow-sensor"
path = "src/main.rs"

[dependencies]
# ============ Core ============
anyhow = "1.0"
tokio = { version = "1.35", features = ["full", "tracing", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive", "env"] }
bytes = "1.5"
thiserror = "1.0"
async-trait = "0.1"
futures = "0.3"

# ============ Network Capture ============
pcap = "1.2"
# AF_XDP (optional) - uncomment when needed
# xsk-rs = "0.2"

# ============ HTTP Client (Backend) ============
reqwest = { version = "0.12", features = ["json", "stream", "gzip", "brotli", "zstd"] }

# ============ Compression (optional) ============
flate2 = { version = "1.0", features = ["zlib"], optional = true }
zstd = { version = "0.13", optional = true }

# ============ Parallel Processing ============
rayon = "1.8"
crossbeam = "0.8"
crossbeam-channel = "0.5"

# ============ Concurrency Control ============
dashmap = "5.5"
lru = "0.12"
governor = "0.6"
tokio-util = { version = "0.7", features = ["rt"] }

# ============ Protocol Parsing ============
etherparse = "0.13"
rumqttc = "0.24"
lapin = "2.3"
tokio-modbus = "0.13"
rtp = "0.3"
trust-dns-proto = "0.23"
dhcproto = { version = "0.10", features = ["serde"] }

# ============ Metrics & Monitoring ============
prometheus = "0.13"
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# ============ Security & Hashing ============
blake3 = "1.5"
ring = "0.17"

# ============ Configuration ============
serde_yaml = "0.9"
config = { version = "0.14", features = ["yaml"] }
dotenvy = "0.15"

# ============ Local Crates (optional) ============
shadow-parsers = { path = "../shadow-parsers", optional = true }

# ============ Kafka (optional) ============
rdkafka = { version = "0.36", features = ["cmake-build", "tokio"], optional = true }

# ============ Development & Build ============
[dev-dependencies]
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }

[build-dependencies]
vergen = { version = "8", features = ["build", "git", "gitcl"], optional = true }

[features]
default = ["pcap"]

# Compression features
compression-gzip = ["flate2"]
compression-zstd = ["zstd"]

# Capture backends
pcap = []
af_xdp = []

# Protocol suites
aviation = ["shadow-parsers"]
kafka = ["rdkafka"]

# Build features
build-meta = ["vergen"]

# Full feature (everything)
full = ["compression-gzip", "compression-zstd", "aviation", "kafka", "pcap", "build-meta"]

# Optimization profiles
[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
debug = false

[profile.bench]
inherits = "release"
debug = false

# Package metadata
[package.metadata.docs.rs]
features = ["full"]
rustdoc-args = ["--cfg", "docsrs"]  